feature(es): es功能完成，自测完成 增加es功能